# python-project-lvl2

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  pyci.yml
gendiff/: __init__.py  cli.py  constants.py  constructor.py  formatter.py  gendiff.py  generator.py  parser.py  script.py  tree.py
gendiff/formatter/: __init__.py  json.py  plain.py  stylish.py
gendiff/formatters/: common.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/expected/: json_from_tree.txt  tree_json.json
tests/fixtures/tree/json/: file2.json
