[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "CLI-utility to compare files"
authors = ["George Rymarenko <george.rymarenko@icloud.com>"]
packages = [
  { include = "gendiff" },
]
classifiers = [
  "Topic :: Utilities",
]
repository = "https://github.com/georg-remer/python-project-lvl2"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[tool.poetry.scripts]
gendiff = "gendiff.script:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
